--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "react-scripts": "3.4.1"
   },
   "hooks": {
-    "pre-commit": "yarn run lint",
-    "pre-push": "npm test"
+    "pre-commit": "yarn lint",
+    "pre-push": "yarn test --watchAll"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "pretest": "yarn lint",
     "test": "react-scripts test",
     "lint": "eslint --fix --ext js,jsx src",
     "eject": "react-scripts eject"
